# WASMBoi

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/dasm/: decode_ld.rs  decoder.rs  mod.rs
src/debug_logger/: cpu_logger.rs  mod.rs
src/mbc/: mbc1.rs  mod.rs  rom.rs
src/spec/: cartridge_header.rs  clock.rs  cpu.rs  gameboy.rs  hardware_registers.rs  jump_condition.rs  memory_region.rs  mmu.rs  mnemonic.rs  mod.rs  opcode.rs  register.rs  register_ops.rs
src/spec/opcodes/: alu.rs  bitwise.rs  branch.rs  control.rs  ld.rs  mod.rs  stack.rs
src/util/: byte_ops.rs  mod.rs
tests/: cpu_integration.rs  timing_integration.rs  util.rs
