[package]
name = "wasmboi"
version = "0.1.0"
authors = ["David Campion <David.Campion@walmartlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl_ops = "0.1.1"
lazy_static = "1.4.0"
ntest = "0.9.0"
num = "0.4.0"
num-integer = "0.1.45"
